--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Writings from '../components/sections/Writings.tsx';
 import Contact from '../components/sections/Contact.astro';
 ---
 
-<Layout title="Aayush518 - Full Stack Developer">
+<Layout title="Aayush518 - Frontend Developer">
   <main class="bg-dark">
     <section id="home">
       <Hero />
